# todolist

./: .env_sample  .gitignore  README.md  app.py  database.py  models.py  pyproject.toml
templates/: base.html
