[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Olga Aukhadieva <sarole4ka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.31"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
